--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Local .terraform directories
 **/.terraform/*
 **/.terraform.lock.hcl/*
-
+ .terraform.lock.hcl
+ 
 
 # .tfstate fileseli
 *.tfstate
